test/files/neg/t8754/B_1.scala
trait Base[T] {
  def peer: Component
}

trait B[T] extends Base[T] {
  def peer: Component {}
}
